--- a/css/custom.css
+++ b/css/custom.css
@@ -11875,4 +11875,14 @@ body {
   font-style: normal;
 }
 
+#main-intro {
+  font-size: 76px;
+}
+
+@media (max-width: 375px) {
+  #main-intro {
+    font-size: 2em;
+  }
+}
+
 /*# sourceMappingURL=custom.css.map */
