wip: removed unecessary media queries

--- a/css/custom.css
+++ b/css/custom.css
@@ -11877,26 +11877,17 @@ body {
 
 #main-intro {
   font-size: 102px;
-}
-
-#headshot {
-  margin-left: 10em;
+  font-weight: 800;
 }
 
 @media (max-width: 375px) {
   #main-intro {
-    font-size: 42px;
-  }
-}
-@media (max-width: 810px) {
-  #main-intro {
-    font-size: 64px;
+    font-size: 4rem;
+    font-weight: 800;
+    text-align: center;
   }
   #headshot {
-    margin-left: 0;
-    width: 200px;
-    height: auto;
-    margin-left: 3em;
+    margin-top: 3.5rem;
   }
 }
 
